[package]
name = "clojure-parser"
version = "0.1.0"
edition = "2024"
description = "A full Clojure/ClojureScript parser in Rust"
license = "MIT OR Apache-2.0"
authors = ["Alex Choi"]
repository = "https://github.com/alexchoi-personal/clj-parser"
keywords = ["clojure", "parser", "ast", "edn"]
categories = ["parsing", "development-tools"]

[dependencies]
thiserror = "2"
bumpalo = { version = "3", features = ["collections"] }
memchr = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
async = ["tokio", "futures"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }
futures = "0.3"

[[bench]]
name = "parse_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
